freenas/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: freenas
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: freenas
    spec:
      volumes:
      - name: oauth2-proxy
        secret:
          secretName: oauth2-proxy
      - name: cacerts
        configMap:
          name: cacerts
      containers:
      - name: oauth2-proxy
        image: nlopez/oauth2_proxy
        ports:
        - containerPort: 4180
        volumeMounts:
        - mountPath: /etc/oauth2-proxy
          name: oauth2-proxy
          readOnly: true
        - mountPath: /etc/ssl/certs/ca-certificates.crt
          name: cacerts
          subPath: ca-certificates.crt
        args:
        - "-upstream=https://192.168.239.16:443/"
        - "-cookie-domain=freenas.desertbluffs.com"
        - "-redirect-url=https://freenas.desertbluffs.com/oauth2/callback"
        - "-http-address=0.0.0.0:4180"
        - "-config=/etc/oauth2-proxy/config"
        - "-authenticated-emails-file=/etc/oauth2-proxy/authenticated-emails"
        - "-cookie-secure=true"
        - "-cookie-expire=168h0m"
        - "-cookie-refresh=60m"
        - "-skip-provider-button=true"
