freenas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freenas
spec:
  selector:
    app: freenas
  ports:
  - name: freenas
    port: 80
    targetPort: 4180
